<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/BTN_startSync"
            android:id="@+id/BTN_startSync"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="startSync"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:max="100"
            android:layout_below="@+id/BTN_startSync"
            android:layout_alignLeft="@+id/BTN_startSync"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/LBL_actualFile"
            android:id="@+id/LBL_actualFile"
            android:layout_below="@+id/progressBar"
            android:layout_alignLeft="@+id/progressBar"
            android:singleLine="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/LBL_remainingFiles"
            android:id="@+id/LBL_remainingFiles"
            android:layout_below="@+id/LBL_actualFile"
            android:layout_alignLeft="@+id/LBL_actualFile"
            android:layout_marginTop="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/LBL_remainingFileSize"
            android:id="@+id/LBL_remainingFileSize"
            android:layout_below="@+id/LBL_remainingFiles"
            android:layout_alignLeft="@+id/LBL_remainingFiles"
            android:layout_marginTop="15dp"/>

</RelativeLayout>
